--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   <script src="db.js"></script>
   <script>if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('service-worker.js')
+      navigator.serviceWorker.register('service-workers.js')
         .then((reg) => {
           console.log('We found your service worker file!', reg);
         });
